[plugins] PluginPackage*.cpp for Gtk+/Qt misassigned hasproperty and hasmethod

https://bugs.webkit.org/show_bug.cgi?id=24510

PluginPackageGtk.cpp and PluginPackageQt.cpp assigned _NPN_HasMethod
to hasproperty and _NPN_HasProperty to hashmethod. This commit is fixing
it. It is also adding test code to PluginObject.cpp and it will invoke
this code from a new test.

Canonical link: https://commits.webkit.org/35836@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@43923 268f45cc-cd09-0410-ab3c-d52691b4dbfc